assets/css/1-tools/animations.scss
%bounceOut {
  @include animation(bounceOut 1s linear both);
}


@include keyframes(bounceOut) { 
  0% { @include transform(matrix3d(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  2.222222% { @include transform(matrix3d(0.22857, 0.05116, 0, 0, 0.0338, 0.22857, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  4.444444% { @include transform(matrix3d(0.45383, 0.15188, 0, 0, 0.09925, 0.45383, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  6.666667% { @include transform(matrix3d(0.65416, 0.23546, 0, 0, 0.1534, 0.65416, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  8.888889% { @include transform(matrix3d(0.81817, 0.27003, 0, 0, 0.17654, 0.81817, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  11.111111% { @include transform(matrix3d(0.9422, 0.25718, 0, 0, 0.16916, 0.9422, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  13.333333% { @include transform(matrix3d(1.02792, 0.21403, 0, 0, 0.14156, 1.02792, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  15.555556% { @include transform(matrix3d(1.08031, 0.15885, 0, 0, 0.10548, 1.08031, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  17.777778% { @include transform(matrix3d(1.10592, 0.105, 0, 0, 0.06988, 1.10592, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  20% { @include transform(matrix3d(1.1117, 0.05994, 0, 0, 0.03994, 1.1117, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  22.222222% { @include transform(matrix3d(1.10412, 0.02641, 0, 0, 0.0176, 1.10412, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  24.444444% { @include transform(matrix3d(1.08871, 0.00405, 0, 0, 0.0027, 1.08871, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  26.666667% { @include transform(matrix3d(1.0698, -0.00905, 0, 0, -0.00603, 1.0698, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  28.888889% { @include transform(matrix3d(1.05057, -0.01531, 0, 0, -0.01021, 1.05057, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  31.111111% { @include transform(matrix3d(1.03306, -0.01699, 0, 0, -0.01133, 1.03306, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  33.333333% { @include transform(matrix3d(1.01844, -0.01593, 0, 0, -0.01062, 1.01844, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  35.555556% { @include transform(matrix3d(1.00716, -0.01347, 0, 0, -0.00898, 1.00716, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  37.777778% { @include transform(matrix3d(0.99917, -0.0105, 0, 0, -0.007, 0.99917, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  40% { @include transform(matrix3d(0.99411, -0.00758, 0, 0, -0.00505, 0.99411, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  42.222222% { @include transform(matrix3d(0.99145, -0.00503, 0, 0, -0.00335, 0.99145, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  44.444444% { @include transform(matrix3d(0.9906, -0.00297, 0, 0, -0.00198, 0.9906, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  46.666667% { @include transform(matrix3d(0.991, -0.00144, 0, 0, -0.00096, 0.991, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  48.888889% { @include transform(matrix3d(0.99217, -0.00038, 0, 0, -0.00025, 0.99217, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  51.111111% { @include transform(matrix3d(0.99372, 0.00029, 0, 0, 0.00019, 0.99372, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  53.333333% { @include transform(matrix3d(0.99535, 0.00064, 0, 0, 0.00043, 0.99535, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  55.555556% { @include transform(matrix3d(0.99687, 0.00077, 0, 0, 0.00052, 0.99687, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  57.777778% { @include transform(matrix3d(0.99817, 0.00076, 0, 0, 0.00051, 0.99817, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  60% { @include transform(matrix3d(0.99919, 0.00067, 0, 0, 0.00044, 0.99919, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  62.222222% { @include transform(matrix3d(0.99993, 0.00054, 0, 0, 0.00036, 0.99993, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  64.444444% { @include transform(matrix3d(1.00041, 0.0004, 0, 0, 0.00026, 1.00041, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  66.666667% { @include transform(matrix3d(1.00068, 0.00027, 0, 0, 0.00018, 1.00068, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  68.888889% { @include transform(matrix3d(1.00079, 0.00017, 0, 0, 0.00011, 1.00079, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  71.111111% { @include transform(matrix3d(1.00077, 0.00009, 0, 0, 0.00006, 1.00077, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  73.333333% { @include transform(matrix3d(1.00069, 0.00003, 0, 0, 0.00002, 1.00069, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  75.555556% { @include transform(matrix3d(1.00056, -0.00001, 0, 0, 0, 1.00056, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  77.777778% { @include transform(matrix3d(1.00043, -0.00003, 0, 0, -0.00002, 1.00043, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  80% { @include transform(matrix3d(1.00029, -0.00004, 0, 0, -0.00002, 1.00029, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  82.222222% { @include transform(matrix3d(1.00018, -0.00004, 0, 0, -0.00002, 1.00018, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  84.444444% { @include transform(matrix3d(1.00009, -0.00003, 0, 0, -0.00002, 1.00009, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  86.666667% { @include transform(matrix3d(1.00002, -0.00003, 0, 0, -0.00002, 1.00002, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  88.888889% { @include transform(matrix3d(0.99997, -0.00002, 0, 0, -0.00001, 0.99997, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  91.111111% { @include transform(matrix3d(0.99995, -0.00001, 0, 0, -0.00001, 0.99995, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  93.333333% { @include transform(matrix3d(0.99994, -0.00001, 0, 0, -0.00001, 0.99994, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  95.555556% { @include transform(matrix3d(0.99993, 0, 0, 0, 0, 0.99993, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  97.777778% { @include transform(matrix3d(0.99994, 0, 0, 0, 0, 0.99994, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); }
  100% { @include transform(matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)); } 
}

